@@ -16,6 +16,10 @@
 /* <dtml-with base_properties> (do not remove this :) */
 /* <dtml-call "REQUEST.set('portal_url', portal_url())"> (not this either :) */
 
+body.section-signals #nonfolderish-subfolder-view-items {
+    display: none;
+}
+
 #smart-view-switch {
     margin: 0.5em 0;
     width: 131px;
